# Secure-RISC-V-Bootloader

./: Cargo.toml  Config.toml  Makefile  README.md  bootloader.ld  keys.rs  private_key.pem  public_key.pem  public_key.rs  public_key_check.rs  rustfmt.toml  sections.txt  signature.rs  source.txt  test.txt
keygen/: Cargo.toml
keygen/src/: main.rs
src/: boot.s  console.rs  ecdsa.rs  flash.rs  lib.rs  tftp.rs
test-ecdsa/: Cargo.toml
test-ecdsa/src/: main.rs
