[package]
name = "cdac-boot"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = { version = "0.13", features = ["ecdsa"], default-features = false }
sha2 = { version = "0.10", default-features = false }

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
